--- a/config/_default/related.toml
+++ b/config/_default/related.toml
@@ -3,9 +3,9 @@ includeNewer = true
 threshold = 60
 toLower = false
 
-# [[indices]]
-# name = "tags"
-# weight = 100
+[[indices]]
+name = "tags"
+weight = 200
 
 [[indices]]
 name = "categories"
