--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -16,3 +16,9 @@ disqusShortname = "anderudp"
 
 [pagination]
 pagerSize = 5
+
+[outputs]
+home = ['html', 'rss']
+section = ['html', 'rss']
+taxonomy = ['html']
+term = ['html']
