--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -2,6 +2,7 @@
 baseurl = "https://anderudp.github.io"
 languageCode = "hu"
 title = "anderudp"
+timeout = "120s"
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn, zh-tw, es, de, nl, it, th, el, uk, ar
